--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -1,1 +1,59 @@
-header
+<div id="wrapper">
+
+<header id="header">
+
+	<section id="toolbar">
+		<nav class="navbar navbar-expand navbar-light bg-light justify-content-between">
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="mailto:email@email.com">
+						<i class="far fa-envelope-open"></i>
+						<span class="d-none d-md-inline">email@email.com</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="tel:+12345678900">
+						<i class="fas fa-phone"></i>
+						<span class="d-none d-md-inline">+12345678900</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fab fa-twitter"></i>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fab fa-instagram"></i>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">
+						<i class="fab fa-pinterest-p"></i>
+					</a>
+				</li>
+			</ul>
+
+			<ul class="navbar-nav">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">
+						<i class="fa fa-comment text-primary" aria-hidden="true"></i>
+						<span class="d-none d-md-inline">Send Message</span>
+					</a>
+				</li>
+				<li class="nav-item active">
+					<a class="nav-link" href="#">
+						<i class="fa fa-rss text-primary" aria-hidden="true"></i>
+						<span class="d-none d-md-inline">Subscribe</span>
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</section> <!-- #toolbar -->
+
+</header> <!-- #header -->
