--- a/src/scss/_bootstrap.scss
+++ b/src/scss/_bootstrap.scss
@@ -23,7 +23,7 @@
 @import "bootstrap/input-group";
 // @import "bootstrap/custom-forms";
 // @import "bootstrap/nav";
-// @import "bootstrap/navbar";
+@import "bootstrap/navbar";
 @import "bootstrap/card";
 @import "bootstrap/breadcrumb";
 @import "bootstrap/pagination";
