--- a/src/html/layouts/header.html
+++ b/src/html/layouts/header.html
@@ -7,13 +7,13 @@
 			<ul class="navbar-nav">
 				<li class="nav-item active">
 					<a class="nav-link" href="mailto:email@email.com">
-						<i class="far fa-envelope-open"></i>
+						<i class="far fa-envelope-open text-primary"></i>
 						<span class="d-none d-md-inline">email@email.com</span>
 					</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="tel:+12345678900">
-						<i class="fas fa-phone"></i>
+						<i class="fas fa-phone text-primary"></i>
 						<span class="d-none d-md-inline">+12345678900</span>
 					</a>
 				</li>
@@ -42,18 +42,65 @@
 			<ul class="navbar-nav">
 				<li class="nav-item active">
 					<a class="nav-link" href="#">
-						<i class="fa fa-comment text-primary" aria-hidden="true"></i>
+						<i class="fas fa-comments text-primary" aria-hidden="true"></i>
 						<span class="d-none d-md-inline">Send Message</span>
 					</a>
 				</li>
 				<li class="nav-item active">
 					<a class="nav-link" href="#">
-						<i class="fa fa-rss text-primary" aria-hidden="true"></i>
+						<i class="fas fa-rss text-primary" aria-hidden="true"></i>
 						<span class="d-none d-md-inline">Subscribe</span>
 					</a>
 				</li>
 			</ul>
 		</nav>
 	</section> <!-- #toolbar -->
+
+
+	<div id="navbar">
+		<div class="site-brand">
+			<a href="index.html" class="toggle-menu">
+				<i class="fas fa-bars"></i>
+			</a>
+			<div class="site-logo">
+				<a href="index.html">
+					<img src="img/logo.png" alt="">
+				</a>
+			</div>
+		</div>
+
+		<nav class="site-menu">
+			<ul>
+				<li class="active">
+					<a href="index.html">Home</a>
+				</li>
+				<li>
+					<a href="shop.html">Shop</a>
+				</li>
+				<li>
+					<a href="blog.html">Blog</a>
+				</li>
+				<li>
+					<a href="contact.html">Contact</a>
+				</li>
+			</ul>
+		</nav>
+
+		<div class="toolbar">
+			<ul>
+				<li>
+					<a href="#">
+						<i class="fas fa-shopping-bag"></i>
+					</a>
+				</li>
+				<li>
+					<a href="#">
+						<i class="fas fa-user"></i>
+					</a>
+				</li>
+			</ul>
+		</div>
+
+	</div> <!-- #navbar -->
 
 </header> <!-- #header -->
