--- a/src/html/layouts/top.html
+++ b/src/html/layouts/top.html
@@ -3,7 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<title>Gulp v4</title>
+	<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" href="img/favicon.ico">
+
+	<title>LightShop</title>
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
