--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,1 +1,25 @@
+/**
+ * Body
+ */
+$body-bg:                   	#f7f7f7;
+$body-color:                	#656565;
+$font-family-base:				'Open Sans', sans-serif;
+$font-size-base:				0.95rem;
+
+/**
+ * Primary colors
+ */
 $primary:						#409EBD;
+
+/**
+ * Border
+ */
+$border-color:					#eeeeee;
+
+/**
+ * Navbar
+ */
+$navbar-bg:						#ffffff;
+$navbar-color:					#555555;
+
+// font-family: 'Roboto Condensed', sans-serif;
