--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,10 @@
+@import "include/fonts";
+
 @import "variables";
+
 @import "fontawesome";
 @import "bootstrap";
+
+@import "include/functions";
+@import "include/global";
+@import "include/navbar";
